implement resume feature
